<resources>
    <string name="app_name">PearVideoClient</string>
    <string name="like_count">%s喜欢</string>
    <string name="tv_modify_data">修改资料</string>
    <string name="tv_login">登录</string>
    <string name="tv_unregistered_hint">未注册手机验证后自动登录</string>
    <string name="tv_enter_dynamic_passowrd">请输入密码</string>
    <string name="tv_enter_tele_phone">请输入手机号/邮箱</string>
    <string name="tv_get_var_code">获取动态密码</string>
    <string name="tv_tele_quick_login">登录</string>
    <string name="detail_up">收起</string>
    <string name="detail_down">详情</string>
    <string name="upload_time">%s 发布了一个视频</string>
    <string name="tv_share">分享</string>
    <string name="tv_like">喜欢</string>
    <string name="tv_commit">评论</string>
    <string name="tv_hot">最热</string>
    <string name="tv_new">最新</string>
    <string name="tv_add_post">发表话题...</string>
    <string name="tv_jump">%ds跳过</string>
    <string name="tv_topping">置顶</string>
    <string name="tv_more">更多</string>
    <string name="tv_follow">关注</string>
    <string name="tv_followed">已关注</string>
    <string name="tv_click_to_change_city">点击切换城市</string>
    <string name="tv_current_city">当前城市 - %s</string>
    <string name="tv_loading">Loading ...</string>
</resources>
