<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_parent"
    android:layout_marginBottom="10dp"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_divide_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/ll_video_other"
        android:layout_marginTop="5dp"
        android:background="@color/common_divide_line" />


    <ImageView
        android:id="@+id/iv_author_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:src="@drawable/author_img_logo" />

    <TextView
        android:id="@+id/tv_author_name"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/iv_author_img"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        tools:text="阿斗带你看电影" />

    <TextView
        android:layout_width="wrap_content"
        tools:text="@string/upload_time"
        android:id="@+id/tv_upload_time"
        android:layout_toEndOf="@id/iv_author_img"
        android:layout_marginStart="5dp"
        android:textSize="11sp"
        android:layout_below="@id/tv_author_name"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_video_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_author_img"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="阿斗带你看电影" />

    <ImageView
        android:id="@+id/iv_video_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tv_video_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/ll_video_other"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@id/iv_video_img"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_chat_bubble_outline_gray_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_commit"
                android:textColor="#7F7F7F" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_favour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_favorite_border_gray_24dp" />

            <TextView
                android:id="@+id/tv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_like"
                android:textColor="#7F7F7F" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_share_gray_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_share"
                android:textColor="#7F7F7F" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>